[project]
name = "squarecloud-restorer"
dynamic = ["version"]
description = "This project helps you restore Snapshots from Square Cloud, uploading the Snapshot and retrieving the old and new ID and the name of the application/database."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
squarecloud_restorer = "squarecloud_restorer.__main__:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/squarecloud_restorer"]

[tool.hatch.version]
source = "vcs"